--- a/ejercicios/02.clone_y_pull.md
+++ b/ejercicios/02.clone_y_pull.md
@@ -2,10 +2,12 @@
 
 1. Clonar mi repositorio:
 
+```
 git clone https://github.com/cesarlpb/learn-git
+```
 
 2. Subiré un cambio
 
-git pull
+`git pull`
 
 3. Visualizad lo nuevo
